<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/barcodeReader"
    android:background="@color/screenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">


    <Button
        android:id="@+id/button_first"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="450dp"
        android:layout_height="170dp"
        android:contentDescription="@string/Barcode_image_text"
        android:src="@drawable/barecode_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        android:autoLink="none"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/barcode_input_hint"
        android:inputType="number"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/test_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>